--- a/06_dom/four.html
+++ b/06_dom/four.html
@@ -13,7 +13,33 @@
 <script>
     function addLanguage(langName){
         const li = document.createElement('li');
-        
+        li.innerHTML = `${langName}`
+        document.querySelector('.language').appendChild(li)
+
     }
+    addLanguage("python")
+    addLanguage("typescript")
+
+    function addOptiLanguage(langName){
+        const li = document.createElement('li')
+        li.appendChild(document.createTextNode(langName))
+        document.querySelector('.language').appendChild(li)
+    }
+    addOptiLanguage("golang")
+
+    //Edit
+    const secondLang = document.querySelector("li:nth-child(2)")
+    // secondLang.innerHTML = "Mojo"
+    const newLi = document.createElement('li')
+    newLi.textContent = "Mojo"
+    secondLang.replaceWith(newLi)
+
+    //edit
+    const firstLang = document.querySelector("li:first-child")
+    firstLang.outerHTML = '<li> TypeScript </li>'
+
+    //remove
+    const lastLanguage = document.querySelector("li:last-child")
+    lastLanguage.remove()
 </script>
 </html>
